--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 /* fonts */
 @font-face {
     font-family: 'elkwood';
-    src: url(../font/elkwood/Elkwood.otf);
+    src: url(font/elkwood/Elkwood.otf);
 }
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
